# Parallel-and-Distributed-Programming

./: CMakeLists.txt
Dining-Philosophers-Problem/: dining_philosophers.cpp  dining_philosophers.h
